tests/snapshots/golden__website__.github__instructions__frontend_agent.md.snap
---
source: tests/golden.rs
expression: content
---
# Role: `frontend_agent`

This rule applies when interacting with files relevant to this role.

## Allowed paths for this role

- `src/**`
- `public/**`

## Forbidden paths for this role

- `functions/**`
- `deployment.json`
- `.github/**`

---

*Defined in `agent-policy.yaml` → roles → frontend_agent*
